--- a/vista.html
+++ b/vista.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>Nuestra primera vista</title>
+  <title>Nuestra primera Vista</title>
 </head>
 <body>
   <h1> Bienvenido a la vista </h1>
